Andrei Suvorkov - index page - fix a bug with project and blog wrapper, about page - fix a layout of blog post on mobile devices.

--- a/Andrei_Suvorkov/about.css
+++ b/Andrei_Suvorkov/about.css
@@ -404,4 +404,8 @@ section .bg-img2 {
     .credentials_mobile {
         display: block;
     }
+    .project_1 {
+        margin-left: 5%;
+        width: 90%;
+    }
 }
